fix: merge from main aligned

--- a/layouts/partials/card.html
+++ b/layouts/partials/card.html
@@ -38,11 +38,13 @@
 
             <div class="recurring-event" 
                 data-start-date="{{ .date }}"
+                {{ with .endDate }}data-end-date="{{ . }}"{{ end }}
                 data-recurrence-type="{{ .recurrenceType | default "weekly" }}"
                 data-recurrence-pattern="{{ .recurrencePattern }}"
                 data-text-today="{{ T "today" | default "Today" }}"
                 data-text-tomorrow="{{ T "tomorrow" | default "Tomorrow" }}"
-                data-text-next="{{ T "next" | default "Next:" }}">
+                data-text-next="{{ T "next" | default "Next:" }}"
+                data-text-ended="{{ T "eventEnded" | default "This recurring event has ended." }}">
                 <div class="flex items-center mt-1">
                     <i class="far fa-calendar-check mr-2"></i>
                     <span class="next-date">
