--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -18,15 +18,44 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="{{ .Title | default .Site.Title }}" />
-  <meta property="og:description" content="{{ .Params.description | default .Site.Params.description }}" />
+  <meta property="og:description" content="{{ .Params.subtitle | default .Site.Params.description }}" />
   <meta property="og:url" content="{{ .Permalink }}" />
+  {{ if .File }}
+  {{ $pathComponents := slice .Language.Lang }}
+  {{ if .Section }}{{ $pathComponents = $pathComponents | append .Section }}{{ end }}
+  {{ if ne .File.LogicalName "_index.md" }}{{ $pathComponents = $pathComponents | append (replace .File.LogicalName
+  ".md" "") }}{{ else }}{{ $pathComponents = $pathComponents | append "_index" }}{{ end }}
+  {{ $ogImagePath := printf "/images/og/%s.png" (delimit $pathComponents "-") }}
+  {{ if fileExists (printf "static%s" $ogImagePath) }}
+  <meta property="og:image" content="{{ .Site.BaseURL }}{{ $ogImagePath }}" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/png" />
+  {{ else }}
   <meta property="og:image" content="{{ .Site.BaseURL }}{{ .Params.image | default .Site.Params.image }}" />
+  {{ end }}
+  {{ else }}
+  <meta property="og:image" content="{{ .Site.BaseURL }}{{ .Params.image | default .Site.Params.image }}" />
+  {{ end }}
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="{{ .Title | default .Site.Title }}" />
-  <meta name="twitter:description" content="{{ .Params.description | default .Site.Params.description }}" />
+  <meta name="twitter:description" content="{{ .Params.subtitle | default .Site.Params.description }}" />
+  {{ if .File }}
+  {{ $pathComponents := slice .Language.Lang }}
+  {{ if .Section }}{{ $pathComponents = $pathComponents | append .Section }}{{ end }}
+  {{ if ne .File.LogicalName "_index.md" }}{{ $pathComponents = $pathComponents | append (replace .File.LogicalName
+  ".md" "") }}{{ else }}{{ $pathComponents = $pathComponents | append "_index" }}{{ end }}
+  {{ $ogImagePath := printf "/images/og/%s.png" (delimit $pathComponents "-") }}
+  {{ if fileExists (printf "static%s" $ogImagePath) }}
+  <meta name="twitter:image" content="{{ .Site.BaseURL }}{{ $ogImagePath }}" />
+  {{ else }}
   <meta name="twitter:image" content="{{ .Site.BaseURL }}{{ .Params.image | default .Site.Params.image }}" />
+  {{ end }}
+  {{ else }}
+  <meta name="twitter:image" content="{{ .Site.BaseURL }}{{ .Params.image | default .Site.Params.image }}" />
+  {{ end }}
   <meta name="twitter:site" content="@MetroOlografix" />
 
   <script src="https://cdn.tailwindcss.com"></script>
@@ -56,7 +85,7 @@
         },
       },
       plugins: [
-        function({ addComponents }) {
+        function ({ addComponents }) {
           addComponents({
             '.prose': {
               '& p': { marginTop: '1.25em', marginBottom: '1.25em' },
@@ -79,10 +108,10 @@
     };
   </script>
   {{ if in .RelPermalink "/photogallery/" }}
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
+  <link href="/css/lightbox.min.css" rel="stylesheet" />
+  <script src="/js/lightbox-plus-jquery.min.js"></script>
   {{end}}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link rel="stylesheet" href="/css/fontawesome.css" />
 
   <!-- Analytics (Umami) -->
   <script defer src="https://cloud.umami.is/script.js" data-website-id="8a990d14-c129-4220-9c0d-be2e2c59ee34"></script>
