--- a/layouts/index.html
+++ b/layouts/index.html
@@ -234,4 +234,20 @@
         </div>
     </div>
 </section>
+
+<!-- Shop Promotion Section -->
+<section class="mt-8 mb-8">
+    {{ partial "card.html" (dict
+        "title" (T "shopHeader")
+        "content" (printf "<div class='grid grid-cols-1 md:grid-cols-2 gap-6 not-prose'><div><h3 class='text-2xl font-bold mb-3 text-accent'>%s</h3><p class='text-gray-700 text-lg'>%s</p></div><div class='flex gap-4 justify-center'><div class='w-1/2'><img src='/images/pile-fronte.png' alt='%s' class='w-full h-auto rounded-lg'></div><div class='w-1/2'><img src='/images/pile-retro.png' alt='%s' class='w-full h-auto rounded-lg'></div></div></div>"
+            (T "shopPileTitle")
+            (T "shopPileDescription")
+            (T "pileFrontAlt")
+            (T "pileBackAlt"))
+        "goToLink" "https://shop.olografix.org"
+        "goToText" (T "visitShop")
+        "isExternal" true
+        "targetBlank" true
+        "withShadow" true) }}
+</section>
 {{ end }}
