--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -94,6 +94,9 @@
   <link href="/css/lightbox.min.css" rel="stylesheet" />
   <script src="/js/lightbox-plus-jquery.min.js"></script>
   {{end}}
+  {{ if eq .Site.Params.enableShopEffect true }}
+  <link rel="stylesheet" href="/css/shop.css" />
+  {{ end }}
   <link rel="stylesheet" href="/css/fontawesome.css" />
 
   <!-- Analytics (Umami) -->
