--- a/layouts/index.html
+++ b/layouts/index.html
@@ -119,6 +119,8 @@
     </a>
 </div>
 
+{{ partial "shop.html" . }}
+
 <section class="mb-8">
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 relative">
         <!-- Activities Column -->
@@ -234,4 +236,5 @@
         </div>
     </div>
 </section>
+
 {{ end }}
